--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "inquirer": "^12.5.2",
     "murmurhash": "^2.0.1",
     "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "prettier": "^3.5.3"
   }
 }
