--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -78,7 +78,7 @@ jobs:
   upload-to-release:
     name: "打包 - 上传至 Release"
     runs-on: ubuntu-latest
-    needs: [build-full-install-zip, build-update-zip]
+    needs: [build-full-install-zip]
     steps:
       - name: "获取源代码"
         uses: actions/checkout@v4
