--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -127,7 +127,7 @@ jobs:
       - name: "上传至 Release"
         uses: softprops/action-gh-release@v1
         env:
-         GITHUB_TOKEN : ${{ secret.GITHUB_TOKEN }}
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: |
             RMPR-linux-x64.tar.xz.zip
